[gd_scene load_steps=12 format=2]

[ext_resource path="res://fonts/limousine/Limousine.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/ResizingLabel.gd" type="Script" id=2]
[ext_resource path="res://ui/SystemList.gd" type="Script" id=3]
[ext_resource path="res://ui/ResizingButton.gd" type="Script" id=4]
[ext_resource path="res://ui/SystemSelector.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]
default_font = SubResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[node name="SystemSelector" type="GridContainer"]
anchor_left = 0.78
anchor_top = 0.1
anchor_right = 0.96
anchor_bottom = 0.645
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
margin_right = 288.0
margin_bottom = 20.0
size_flags_horizontal = 3
theme = SubResource( 2 )
text = "Astral Gate Destinations"
align = 1
valign = 1
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SystemList" type="ItemList" parent="."]
margin_top = 24.0
margin_right = 288.0
margin_bottom = 460.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = SubResource( 4 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpButton" type="Button" parent="."]
margin_left = 118.0
margin_top = 464.0
margin_right = 169.0
margin_bottom = 490.0
size_flags_horizontal = 4
theme = SubResource( 6 )
disabled = true
text = "Jump"
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="astral_jump" from="SystemList" to="." method="astral_jump"]
[connection signal="astral_jump" from="SystemList" to="JumpButton" method="_on_list_activate"]
[connection signal="item_activated" from="SystemList" to="SystemList" method="_on_item_activated"]
[connection signal="item_selected" from="SystemList" to="SystemList" method="_on_item_selected"]
[connection signal="selectable_item_selected" from="SystemList" to="." method="selectable_item_selected"]
[connection signal="selectable_item_selected" from="SystemList" to="JumpButton" method="_on_list_select"]
[connection signal="pressed" from="JumpButton" to="SystemList" method="_on_JumpButton_pressed"]
